@@ -22472,6 +22472,7 @@ static const u16 sDunsparceTeachableLearnset[] = {
     MOVE_STRENGTH,
     MOVE_SUNNY_DAY,
     MOVE_SWAGGER,
+    MOVE_SWIFT,
     MOVE_TAKE_DOWN,
     MOVE_TERRAIN_PULSE,
     MOVE_THIEF,
